# tableTopCC

assorted/: commands.txt
assorted/cnf/: ca.cnf
assorted/hpec/: hpec.txt
assorted/vault/: remake.txt  vault.txt
central/: commands.txt
central/client/: tsconfig.loginpage.json  tsconfig.loginpage.tsbuildinfo
central/server/: .gitignore  CMakeLists.txt  central.conf  central.cpp  requests.conf
central/server/nginx/: nginx.conf
central/server/nginx-1.29.1/: Makefile
hashi-ansible/: ansibleCommands.txt
hashi-ansible/inventory/: hosts.yaml
hashi-ansible/playbooks/: remake-vault.yaml
hashi-ansible/vars/: vault.yaml
mongo-ansible/: .gitignore  ansibleCommands.txt  mongoCommands.txt
mongo-ansible/inventory/: hosts.yaml
mongo-ansible/playbooks/: add-config-servers.yaml  add-mongos-routers.yaml  add-shard-servers.yaml  init-config-servers.yaml  init-shard-servers.yaml  remove-config-servers.yaml  remove-mongos-routers.yaml  remove-shard-servers.yaml  restart-config-servers.yaml  restart-mongos-routers.yaml  restart-shard-servers.yaml
mongo-ansible/vars/: share.yaml
network-ansible/: .gitignore  ansibleCommands.txt
network-ansible/inventory/: hosts.yaml
network-ansible/playbooks/: init-networking-physical.yaml  init-networking-vm.yaml  nftables.yaml  remove-networking-physical.yaml  remove-networking-vm.yaml
network-ansible/vars/: share.yaml  vm.yaml
nexus/: commands.txt
nexus/client/: eslint.config.js  package-lock.json  tailwind.config.js  tsconfig.dashboard.json  tsconfig.json  tsconfig.mongo.json  tsconfig.vault.json  tsconfig.webpack.json  webpack.config.js
nexus/server/: CMakeLists.txt  nexus.conf  nexus.cpp  requests.conf  vault_requests.cpp
tableTopAssorted/: .gitignore
tableTopAssorted/cnf/: table-top-vault-server-nginx.cnf  table-top-vault-server.cnf  vault.cnf
tableTopAssorted/hpec/: hpec.txt
tableTopAssorted/vault/: vault.txt
tableTopAssorted/virtualMachines/: vm.txt
tableTopAssorted/vnc/: tiger.txt
tableTopVaultServer/: .gitignore  CMakeLists.txt  commands.txt  package-lock.json  requests.conf  tsconfig.dashboard.tsbuildinfo  vault.conf  vault.cpp
tableTopVaultServer/client/: package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.dashboard.json  webpack.config.js
tableTopVaultServer/client/dashboard/public/: dashboard.html
tableTopVaultServer/client/dashboard/src/: Main.tsx  ServerRequests.ts
tableTopVaultServer/client/dashboard/src/css/: index.css
tableTopVaultServer/client/dashboard/src/navigationPanel/: NavigationPanel.tsx
tableTopVaultServer/client/dashboard/src/serverRequests/: ServerRequests.ts
tableTopVaultServer/client/dashboard/src/vaultRequestsPanel/: VaultRequestsPanel.tsx
tableTopVaultServer/client/loginPage/: index.tsx
tableTopVaultServer/client/loginPage/src/: Main.tsx
tableTopVaultServer/client/loginPage/src/css/: index.css
tableTopVaultServer/client/public/css/: share.css
tableTopVaultServer/nginx/: nginx.conf  nginx.conf.template
tableTopVaultServer/nginx-1.29.1/: Makefile
tableTopVaultServer/nginx-1.29.1/objs/: Makefile  autoconf.err  nginx.8  ngx_auto_config.h  ngx_modules.c
tableTopVaultServer/server/: CMakeLists.txt  vault.conf  vault.cpp
tableTopVaultServer/server/nginx/: nginx.conf
tableTopVaultServer/server/nginx-1.29.1/: Makefile
tableTopVaultServer/server/nginx-1.29.1/objs/: Makefile  autoconf.err  nginx.8  ngx_auto_config.h
tableTopVaultServer/server/src/: routes.cpp  routes.h  serverUtils.h
tableTopVaultServer/src/dashboard/public/: dashboard.html
tableTopVaultServer/src/dashboard/public/css/: index.css  scrollbar.css
tableTopVaultServer/src/server/: routes.cpp  vaultClient.cpp
tableTopVaultServer2/: daemon.conf  gui.conf
tableTopVaultServer2/nginx/: nginx.conf
vault-ansible/: ansibleCommands.txt
vault-ansible/inventory/: hosts.yaml
vmPaste/: CMakeLists.txt  vmPaste.cpp
vmPaste/src/: VMSelectionOverlay.cpp  VMSelectionOverlay.h
(+164 files in other folders)
